style changed a bit

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <h1 class="main-heading">SUPERHEROS</h1>
+    <h1 class="main-heading">SUPER<span style="color: red;">HEROS</span></h1>
+    <p class="sub-heading"><i>-from all of the universes</i></p>
     <div class="cntr" id="cntr">
         <!-- <div class="col-sm-6 offset-sm-3 bg-success">
             manish
@@ -38,6 +39,12 @@
                 <div class="progress-bar ml-3" style="width: 100%"></div>
             </div>
         </div> -->
+
+
+        <div class="progress" style="height: 20px;">
+            <h6 class="properties">Demo</h6>
+            <div class="progress-bar ml-3">data unavailable</div>
+        </div>
 
     </div>
 
