data unavailble option added

--- a/index.html
+++ b/index.html
@@ -40,11 +40,8 @@
             </div>
         </div> -->
 
-
-        <div class="progress" style="height: 20px;">
-            <h6 class="properties">Demo</h6>
-            <div class="progress-bar ml-3">data unavailable</div>
-        </div>
+        <!-- <h6 class="properties">Demo</h6>
+        <p>data unavailable</p> -->
 
     </div>
 
